--- a/style.css
+++ b/style.css
@@ -70,10 +70,10 @@
 {
     .container{
         width: 100%;
-        flex-direction: column;
+        flex-direction: row;
     }
     .training-items{
-        margin: 15px;
+        margin: 7.5px;
     }
 }
 
